prompt updates